examples/nginx/app-repo/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx
  labels:
    istio.io/rev: asm-managed
